--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,11 @@
 name: visorenv
 channels:
+  - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - pymol-open-source
-  - pandas
   - biopython
-prefix: /home/francisco/miniconda3/envs/visorenv
+  - pandas
+  - pip:
+      - git+https://github.com/CBBIO/protein-metamorphisms-is.git
